WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85610
[Qt] Images are scaled badly in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=85610
Summary
[Qt] Images are scaled badly in WebKit2
Simon Hausmann
Reported
2012-05-04 05:21:58 PDT
[Qt] Images are scaled badly in WebKit2
Attachments
Patch
(3.36 KB, patch)
2012-05-04 05:25 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-05-04 05:22:54 PDT
Simple to reproduce: Load google.com, scale in a lot to see the google logo pixelated in ugly ways. On the N9 we (implicitly through another change) enabled QPainter::SmoothPixmapTransform. We should do the same for WK2/Qt5.
Simon Hausmann
Comment 2
2012-05-04 05:25:11 PDT
Created
attachment 140195
[details]
Patch
Jocelyn Turcotte
Comment 3
2012-05-04 05:30:19 PDT
Comment on
attachment 140195
[details]
Patch Like discussed, simple and efficient for now. We can try to centralize the setting if this frequently needs to be tweaked.
Andras Becsi
Comment 4
2012-05-24 04:52:19 PDT
Landed in
http://trac.webkit.org/changeset/116087
.
Andras Becsi
Comment 5
2012-05-24 04:52:38 PDT
Comment on
attachment 140195
[details]
Patch Clearing flags.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug