[Qt] Images are scaled badly in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=85610

Reviewed by Jocelyn Turcotte.

Source/WebCore:

Enable smooth pixmap transforms when rendering into the GraphicsSurface image.
This class is only used in WK2.

* platform/graphics/surfaces/qt/GraphicsSurfaceQt.cpp:
(WebCore::GraphicsSurface::platformBeginPaint):

Source/WebKit2:

Enable smooth pixmap transforms for WK2 bitmaps.

* Shared/qt/ShareableBitmapQt.cpp:
(WebKit::ShareableBitmap::createGraphicsContext):

Canonical link: https://commits.webkit.org/103160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116087 268f45cc-cd09-0410-ab3c-d52691b4dbfc